# peropero

./: .gitignore  .gitmodules  CLAUDE.md  README.md  deploy_locally.sh  pyproject.toml
.clinerules/: commands.json
server/: __init__.py  instantsplat_service.py  noposplat_service.py  vggt_service.py
