[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 68.0"]

[project]
dependencies = [
  "fastapi >= 0.115.12",
  "numpy >= 2.0.2",
  "uvicorn[standard] >= 0.34.2",
  "torch >= 2.7.0",
  "torchvision >= 0.18.0",
  "Pillow >= 10.0.0",
  "omegaconf >= 2.3.0",
  "scipy >= 1.10.0",
  "plyfile >= 0.8.1",
  "tqdm >= 4.60.0",
  "lightning >= 2.0.0",
  "hydra-core >= 1.3.0",
  "jaxtyping >= 0.2.20",
  "beartype >= 0.15.0",
  "wandb >= 0.15.0",
  "einops >= 0.6.0",
  "colorama >= 0.4.0",
  "scikit-image >= 0.20.0",
  "colorspacious >= 1.1.0",
  "matplotlib >= 3.7.0",
  "moviepy == 1.0.3",
  "imageio >= 2.30.0",
  "timm >= 0.9.0",
  "dacite >= 1.8.0",
  "lpips >= 0.1.4",
  "e3nn >= 0.5.0",
  "tabulate >= 0.9.0",
  "svg.py >= 0.1",
  "scikit-video >= 1.1.0",
  "opencv-python >= 4.7.0",
  "python-multipart >= 0.0.20",
]
name = "peropero"
requires-python = ">= 3.9"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["server*"]
where = ["."]

[dependency-groups]
dev = [
  "ruff >= 0.11.10",
]
