[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 68.0"]

[project]
dependencies = [
  "fastapi >= 0.115.12",
  "numpy >= 2.0.2",
  "uvicorn[standard] >= 0.34.2",
  "torch >= 2.7.0",
  "torchvision >= 0.18.0",
  "Pillow >= 10.0.0",
  "omegaconf >= 2.3.0",
  "scipy >= 1.10.0",
  "plyfile >= 0.8.1",
  "tqdm >= 4.60.0",
  "einops >= 0.6.0",
  "matplotlib >= 3.7.0",
  "imageio >= 2.30.0",
  "lpips >= 0.1.4",
  "opencv-python >= 4.7.0",
  "python-multipart >= 0.0.20",
  "roma",
  "evo",
  "gradio",
  "trimesh",
  "tensorboard",
  "pyglet<2",
  "huggingface-hub[torch]>=0.22",
  "gdown",
  "cython",
  "icecream",
  "open3d<1.0",
  "pycolmap==3.10.0",
  "viser==0.2.23",
  "hydra-core",
  "onnxruntime",
  "requests",
  "safetensors",
  "pyceres==2.3",
  "lightglue @ git+https://github.com/jytime/LightGlue.git#egg=lightglue",
  "gsplat",
]
name = "peropero"
requires-python = ">= 3.9"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["server*"]
where = ["."]

[tool.uv.sources]
gsplat = { path = "server/gsplat" }

[dependency-groups]
dev = [
  "ruff >= 0.11.10",
]
